--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "auto-script",
   "version": "1.0.0",
-  "description": "",
+  "description": "用于自动化脚本的工具集合",
   "main": "index.js",
+  "files": [
+    "scripts"
+  ],
   "bin": {
-    "git-push": "./git-push.sh",
-    "push-origin": "./push-test.sh",
-    "demo-c": "./create-demo-file.sh"
+    "git-push": "./scripts/git-push.sh",
+    "push-origin": "./scripts/push-origin.sh",
+    "demo-c": "./scripts/create-demo-file.sh"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
